--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 
 /* Images Container */
 .images-container {
-
+  width: 800px;
   margin-top: 50px;
 }
 
@@ -80,7 +80,11 @@ body {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-
+.card-img-top {
+  width: 100%;
+  height: auto;
+  border-radius: 5px 5px 0 0;
+}
 
 .card-body {
   padding: 20px;
@@ -90,7 +94,6 @@ body {
   margin: 10px auto;
   font-size: 24px;
 }
-
 
 
 /* Save Confirmation */
@@ -115,13 +118,18 @@ body {
   body {
     line-height: 1.4rem;
     font-size: 0.9rem;
-
+    text-align: justify;
   }
 
+  .images-container {
+    width: 100%;
+  }
 
   .card-title {
     font-size: 20px;
   }
 
-  
+  .save-confirmed {
+    right: 25px;
+  }
 }
